# note

./: LICENSE  README.md  pyproject.toml
note/: cli.py  note.py  note_id.py  note_manager.py
tests/: test_cli.py  test_note.py  test_note_id.py
