[build-system]
requires = ["setuptools"]

[project]
name = "note"
version = "0.0.1"
dependencies = [
    "click >= 8.1.3",
    "thefuzz",
    "python-Levenshtein",
    "markdown",
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest"
]

[project.scripts]
note = "note.cli:main"

[tool.setuptools]
include-package-data = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.isort]
profile = "black"
